// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshots Icon only displayStyle: 2 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb hSOygD"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 3 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb efHhsQ"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Icon only displayStyle: 4 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb crfuQZ"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb khTHXI"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 2`] = `
<a
  class="sc-htpNat gvnBtO"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb buRaAO"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 2`] = `
<a
  class="sc-htpNat cDSFUY"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-ifAKCX psvBQ"
  />
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb cJaWEV"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 2`] = `
<a
  class="sc-htpNat hvvZmH"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 1`] = `
<button
  class="sc-bxivhb hxpswH"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa byUSSw"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 2`] = `
<a
  class="sc-htpNat jfOtAL"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa byUSSw"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-bxivhb dVIoYX"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-bxivhb fCEzpi"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-bxivhb jfzjLM"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-bxivhb fytAEI"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb gvOsyi"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-bxivhb eudxUn"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-bxivhb gCMcLo"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-bxivhb hvauMw"
  disabled=""
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-bxivhb bgbWDp"
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-bxivhb hJZFcT"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb hPNMQL"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-bxivhb lmTQpQ"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: false 1`] = `
<button
  class="sc-bxivhb dVIoYX"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: true 1`] = `
<button
  class="sc-bxivhb fCEzpi"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: false 1`] = `
<button
  class="sc-bxivhb jfzjLM"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: true 1`] = `
<button
  class="sc-bxivhb fytAEI"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb gvOsyi"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: true 1`] = `
<button
  class="sc-bxivhb eudxUn"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: false 1`] = `
<button
  class="sc-bxivhb gCMcLo"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: true 1`] = `
<button
  class="sc-bxivhb hvauMw"
  disabled=""
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: false 1`] = `
<button
  class="sc-bxivhb bgbWDp"
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: true 1`] = `
<button
  class="sc-bxivhb hJZFcT"
  disabled=""
  size="1"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb hPNMQL"
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: true 1`] = `
<button
  class="sc-bxivhb lmTQpQ"
  disabled=""
  size="2"
  type="button"
>
  <test-file-stub
    classname="sc-ifAKCX evOPPJ"
  />
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 1`] = `
<button
  class="sc-bxivhb gvOsyi"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 2`] = `
<button
  class="sc-bxivhb gvOsyi"
  size="2"
  type="button"
>
  <p
    class="sc-bdVaJa Wzjkf"
  >
    News
  </p>
</button>
`;
